vim/test/assets/parse-error.hs.ghc-9.6.6.errors
[1 of 2] Compiling Main             ( parse-error.hs, parse-error.o )

parse-error.hs:1:1: error:
    Parse error: module header, import declaration
    or top-level declaration expected.
