vim/test/assets/parse-error.hs
foo : Int
foo = 23
